--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <main>
         <section id="celular">
-
+            <iframe src="home.html" id="tela"></iframe>
         </section>
         <section id="botão">
              
