--- a/index.html
+++ b/index.html
@@ -13,8 +13,13 @@
         <section id="celular">
             <iframe src="home.html" id="tela"></iframe>
         </section>
-        <section id="botão">
-             
+        <section id="botao">
+             <a href=""><img src="Imagens/logo-home.jpg" alt="Home"></a>
+             <a href=""><img src="Imagens/logo-youtube.jpg" alt="Youtube"></a>
+             <a href=""><img src="Imagens/logo-github.jpg" alt="Github"></a>
+             <a href=""><img src="Imagens/logo-instagram.jpg" alt="Instagram"></a>
+             <a href=""><img src="Imagens/logo-twitter.jpg" alt="Twitter"></a>
+             <a href=""><img src="Imagens/logo-facebook.jpg" alt="Facebook"></a>
         </section>
     </main>
 </body>
