--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 <body>
     <main>
         <section id="celular">
-            <iframe src="home.html" id="tela"></iframe>
+            <iframe src="home.html" id="tela" name="tela"></iframe>
         </section>
         <section id="botao">
-             <a href="home.html"><img src="Imagens/logo-home.jpg" alt="Home"></a>
-             <a href="#"><img src="Imagens/logo-youtube.jpg" alt="Youtube"></a>
-             <a href="#"><img src="Imagens/logo-github.jpg" alt="Github"></a>
-             <a href="#"><img src="Imagens/logo-instagram.jpg" alt="Instagram"></a>
-             <a href="#"><img src="Imagens/logo-twitter.jpg" alt="Twitter"></a>
-             <a href="#"><img src="Imagens/logo-facebook.jpg" alt="Facebook"></a>
+             <a href="home.html" target="tela"><img src="Imagens/logo-home.jpg" alt="Home"></a>
+             <a href="Youtube.html" target="tela"><img src="Imagens/logo-youtube.jpg" alt="Youtube"></a>
+             <a href="#" target="tela"><img src="Imagens/logo-github.jpg" alt="Github"></a>
+             <a href="#" target="tela"><img src="Imagens/logo-instagram.jpg" alt="Instagram"></a>
+             <a href="#" target="tela"><img src="Imagens/logo-twitter.jpg" alt="Twitter"></a>
+             <a href="#" target="tela"><img src="Imagens/logo-facebook.jpg" alt="Facebook"></a>
         </section>
     </main>
 </body>
