--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@
              <a href="home.html" target="tela"><img src="Imagens/logo-home.jpg" alt="Home"></a>
              <a href="Youtube.html" target="tela"><img src="Imagens/logo-youtube.jpg" alt="Youtube"></a>
              <a href="#" target="tela"><img src="Imagens/logo-github.jpg" alt="Github"></a>
+             <a href="#" target="tela"><img src="Imagens/Botão liga.webp" alt=""></a>
              <a href="#" target="tela"><img src="Imagens/logo-instagram.jpg" alt="Instagram"></a>
              <a href="#" target="tela"><img src="Imagens/logo-twitter.jpg" alt="Twitter"></a>
              <a href="#" target="tela"><img src="Imagens/logo-facebook.jpg" alt="Facebook"></a>
+             <a href="#" target="tela"><img src="Imagens/Botão desligar.webp" alt=""></a>
         </section>
     </main>
 </body>
