--- a/celular-desligado.html
+++ b/celular-desligado.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="estilos/social.css">
     <title>Document</title>
+    <style>
+        body{
+            background-color: black;
+        }
+    </style>
 </head>
 <body>
-    <img src="Imagens/tela-youtube.png" alt="">
-    <a href="https://www.youtube.com/@CursoemVideo" target="_blank">ACESSE</a>
+    
 </body>
 </html>
