--- a/botões/home.html
+++ b/botões/home.html
@@ -1,18 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="estilos/social.css">
     <title>Document</title>
-    <style>
-        body{
-            background: black url(Imagens/tela-home.jpg) no-repeat top center;
-            background-size: cover;
-        }
-    </style>
 </head>
 <body>
-    
+    <img src="../Imagens/tela-home.jpg" alt="">
+    <a href="https://www.youtube.com/@CursoemVideo" target="_blank">ACESSE</a>
 </body>
 </html>
