--- a/botões/instagram.html
+++ b/botões/instagram.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-    <img src="Imagens/tela-youtube.png" alt="">
+    <img src="../Imagens/tela-instagram.jpg" alt="">
     <a href="https://www.youtube.com/@CursoemVideo" target="_blank">ACESSE</a>
 </body>
 </html>
