--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <section id="botao">
              <a href="home.html" target="tela"><img src="Imagens/logo-home.jpg" alt="Home"></a>
              <a href="Youtube.html" target="tela"><img src="Imagens/logo-youtube.jpg" alt="Youtube"></a>
-             <a href="#" target="tela"><img src="Imagens/logo-github.jpg" alt="Github"></a>
+             <a href="github.html" target="tela"><img src="Imagens/logo-github.jpg" alt="Github"></a>
              <a href="home.html" target="tela"><img src="Imagens/Botão liga.webp" alt="ligar"></a>
              <a href="#" target="tela"><img src="Imagens/logo-instagram.jpg" alt="Instagram"></a>
              <a href="#" target="tela"><img src="Imagens/logo-twitter.jpg" alt="Twitter"></a>
