--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
             <iframe src="celular-desligado.html" id="tela" name="tela"></iframe>
         </section>
         <section id="botao">
-             <a href="home.html" target="tela"><img src="Imagens/logo-home.jpg" alt="Home"></a>
-             <a href="Youtube.html" target="tela"><img src="Imagens/logo-youtube.jpg" alt="Youtube"></a>
-             <a href="github.html" target="tela"><img src="Imagens/logo-github.jpg" alt="Github"></a>
-             <a href="home.html" target="tela"><img src="Imagens/Botão liga.webp" alt="ligar"></a>
+             <a href="botões/home.html" target="tela"><img src="Imagens/logo-home.jpg" alt="Home"></a>
+             <a href="botões/Youtube.html" target="tela"><img src="Imagens/logo-youtube.jpg" alt="Youtube"></a>
+             <a href="botões/github.html" target="tela"><img src="Imagens/logo-github.jpg" alt="Github"></a>
+             <a href="botões/home.html" target="tela"><img src="Imagens/Botão liga.webp" alt="ligar"></a>
              <a href="#" target="tela"><img src="Imagens/logo-instagram.jpg" alt="Instagram"></a>
              <a href="#" target="tela"><img src="Imagens/logo-twitter.jpg" alt="Twitter"></a>
-             <a href="facebook.html" target="tela"><img src="Imagens/logo-facebook.jpg" alt="Facebook"></a>
-             <a href="celular-desligado.html" target="tela"><img src="Imagens/Botão desligar.webp" alt="desligar"></a>
+             <a href="botões/facebook.html" target="tela"><img src="Imagens/logo-facebook.jpg" alt="Facebook"></a>
+             <a href="botões/celular-desligado.html" target="tela"><img src="Imagens/Botão desligar.webp" alt="desligar"></a>
         </section>
     </main>
 </body>
