eu atualizei o site

--- a/home.html
+++ b/home.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <style>
         body{
-            background: black url(../Imagens/tela-home.jpg) no-repeat top center;
+            background: black url(Imagens/tela-home.jpg) no-repeat top center;
             background-size: cover;
         }
     </style>
